--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -1,53 +1,34 @@
-.ContainerUtama{
-    background: #F4F4F4;
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100vh;
+.ContainerUtama {
+  background: #f4f4f4;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100vh;
 }
 
-
-
-
-.MenuBtn{
-    display: flex;
-   
-
+.MenuBtn {
+  display: flex;
 }
 
-.ContainerLuar2{
-    display: flex;
-    justify-content: center;
-    width: 88%;
-
-
+.ContainerLuar2 {
+  display: flex;
+  justify-content: center;
+  width: 88%;
 }
 
-
-
-
-
-.ContainerDua{
-    width: 90%;
-
-
+.ContainerDua {
+  width: 90%;
 }
 
-
-
-
-
-.CardContainer1{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+.CardContainer1 {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
-.Header{
-    margin-top: 2vh;
-    font-size: 36px;
-    font-weight: 500;
-    
+.Header {
+  margin-top: 2vh;
+  font-size: 36px;
+  font-weight: 500;
 }
-
