--- a/src/LoginPage.css
+++ b/src/LoginPage.css
@@ -1,35 +1,28 @@
-.utamaContainer{
-display: flex;
+.utamaContainer {
+  display: flex;
 
-justify-content: center;
-justify-content: space-around;
-height: 100vh;
+  justify-content: center;
+  justify-content: space-around;
+  height: 100vh;
 }
 
-.headerContainer{
+.headerContainer {
   margin: 2vw;
   width: 90%;
-  
-
 }
 
-.Foto{
+.Foto {
   width: 90%;
   height: auto;
   border-radius: 20px;
   box-shadow: 0px 30px 50px rgba(0, 0, 0, 0.1);
-
 }
 
-
-
-
-.headerItem{
+.headerItem {
   font-size: 36px;
   font-weight: 500;
-  color: #2762FF;
+  color: #2762ff;
 }
-
 
 .formContainer {
   margin: 2vw;
@@ -39,27 +32,22 @@ height: 100vh;
   width: 50%;
 }
 
-.komponenSatu{
+.komponenSatu {
   width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-
-
-
-
-.komponenDua{
+.komponenDua {
   width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #E3F0FF;
+  background-color: #e3f0ff;
 }
 
 .formItem {
-  
   width: 100%;
   margin: 1vw 1vw;
 }
@@ -68,11 +56,10 @@ height: 100vh;
   text-align: left;
   color: #9b9b9b;
   font-size: 16px;
-  
 }
 
 .inputText {
-  border: 0.88255px solid #BDBDBD;
+  border: 0.88255px solid #bdbdbd;
   font-size: 18px;
   margin-top: 1vw;
   padding: 3px;
@@ -80,10 +67,9 @@ height: 100vh;
   height: 12vw;
   max-height: 40px;
   background-color: #e9e9e9;
- 
+
   border-radius: 6px;
 }
-
 
 .formBtn {
   margin: 2vw;
@@ -93,11 +79,10 @@ height: 100vh;
   color: #ffffff;
   font-size: 16px;
   font-weight: bold;
-  background-color: #278AFF;
+  background-color: #278aff;
   width: 40%;
   height: 9vw;
   max-height: 40px;
-  
+  text-decoration: none;
   border-radius: 6px;
 }
-
