--- a/src/newAppointment.css
+++ b/src/newAppointment.css
@@ -17,11 +17,12 @@
 }
 
 .backgroundGelap{
-       display: flex;
-       justify-content: center;
-       align-items: center;
-       width: 100px;
-       height: 100%;
-       background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 1000px;
+    height: 100%;
+    background-color: #00000057;
+    position: absolute;
 
 }
