--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -23,6 +23,7 @@
 .CardContainer1 {
   width: 100%;
   display: flex;
+  justify-content: flex-start;
   justify-content: space-between;
   flex-wrap: wrap;
 }
