--- a/src/Components/navigation.css
+++ b/src/Components/navigation.css
@@ -1,10 +1,12 @@
 .NavContainer {
   background: #ffffff;
+  position: sticky;
+  top: 0;
   width: 12%;
   display: flex;
   justify-content: center;
   align-content: center;
-  min-height: 110vh;
+  min-height: 100vh;
   height: 100%;
   z-index: 100;
 }
@@ -54,6 +56,7 @@
 
 .footer {
   width: 100%;
+  height: 12%;
 }
 
 .NavigationCon {
