--- a/src/Components/formViewDetails.css
+++ b/src/Components/formViewDetails.css
@@ -108,7 +108,7 @@
 
   .photos{
     
-    margin-top: 1vh;
+    
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -123,6 +123,7 @@
   }
   .btnAddPhotos{
     margin-top: 2vh;
+    margin-bottom: 1vh;
     cursor: pointer;
     display: flex;
     justify-content: center;
