--- a/src/View/NewItem.css
+++ b/src/View/NewItem.css
@@ -103,6 +103,8 @@
 
 }
 
+
+
 .inputImage{
   width: 100%;
   margin-top: 2vh;
@@ -129,9 +131,22 @@
 
 }
 
+.formBiaya{
+  width: 45%;
+
+}
+
+.formKuantitas{
+  width: 45%;
+
+
+}
+
+
 .biayaContainer{
   margin-top: 4vh;
-
+  display: flex;
+  justify-content: space-between;
 }
 
 .form4{
@@ -155,6 +170,22 @@
 
 
 }
+
+.inputKuantitas{
+  border: 0.88255px solid #bdbdbd;
+  font-size: 18px;
+  margin-top: 1vh;
+  padding: 3px;
+  width: 100%;
+  height: 6vh;
+  
+  background-color: #e9e9e9;
+
+  border-radius: 6px;
+
+
+}
+
 
 .btnNext{
   
