--- a/src/Components/FinishForm.css
+++ b/src/Components/FinishForm.css
@@ -23,7 +23,7 @@
 }
 
 .formBawah {
-  margin-top: 30vh;
+  margin-top: 70px;
   display: flex;
   justify-content: flex-end;
 }
@@ -57,8 +57,7 @@
   margin-top: 2vh;
 }
 
-.fotoPasien{
+.fotoPasien {
   width: 80px;
   height: 80px;
-
 }
