--- a/src/Components/FinishForm.css
+++ b/src/Components/FinishForm.css
@@ -39,16 +39,16 @@
 .btnFinish {
   display: flex;
   justify-content: center;
-
   color: #ffffff;
   font-size: 16px;
   font-weight: bold;
   background-color: #278aff;
   width: 20%;
   height: 6vh;
-
   text-decoration: none;
   border-radius: 6px;
+  border: none;
+  outline: none;
 }
 
 .formInfoBooking {
