--- a/src/View/HomePage.css
+++ b/src/View/HomePage.css
@@ -35,3 +35,12 @@
   font-weight: 500;
 }
 
+.dropdownDate {
+  border: none;
+  font-size: 16px;
+  color: #278aff;
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  outline: none;
+}
