--- a/src/View/HomePage.css
+++ b/src/View/HomePage.css
@@ -24,8 +24,8 @@
 .CardContainer1 {
   width: 100%;
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-column-gap: 25px;
+  grid-template-columns: 23% 23% 23% 23%;
+  grid-column-gap: 2%;
   grid-row-gap: 20px;
 }
 
