--- a/src/Components/FinishForm.css
+++ b/src/Components/FinishForm.css
@@ -1,7 +1,7 @@
 .fotoNamadanKeperluanPasien {
   display: flex;
   justify-content: space-between;
-  width: 30%;
+  width: 50%;
 }
 
 .jamFinish {
@@ -23,7 +23,7 @@
 }
 
 .formBawah {
-  margin-top: 70px;
+  margin-top: 40px;
   display: flex;
   justify-content: flex-end;
 }
@@ -37,7 +37,6 @@
 }
 
 .btnFinish {
-
   color: #ffffff;
   font-size: 16px;
   font-weight: bold;
@@ -58,6 +57,19 @@
 }
 
 .fotoPasien {
+  margin: 0 20px 0 0;
   width: 80px;
   height: 80px;
+}
+
+.totalBiaya {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nominalBiaya {
+  font-size: 16px;
+  font-weight: bold;
+  color: #00ae07;
 }
